feat: add oauth dependencies